[tool.poetry]
name = "mcts"
version = "0.1.0"
description = "A simple implementation of single-player MCTS."
authors = ["Noah Farr <login@noahfarr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jax = "^0.4.28"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
